[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/TitleScreenTheme.tres" type="Theme" id=2]

[node name="SettingsMenu" type="Popup"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -75.0
margin_right = 120.0
margin_bottom = 75.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 8.0
margin_top = 5.0
margin_right = 54.0
margin_bottom = 21.0
text = "Controls"

[node name="SaveButton" type="Button" parent="Panel"]
margin_left = 217.0
margin_top = 134.0
margin_right = 253.0
margin_bottom = 156.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Save"

[node name="ResetButton" type="Button" parent="Panel"]
margin_left = 179.0
margin_top = 6.0
margin_right = 289.0
margin_bottom = 28.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Reset to Defaults"

[node name="CancelButton" type="Button" parent="Panel"]
margin_left = 8.0
margin_top = 133.0
margin_right = 54.0
margin_bottom = 155.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Cancel"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 10.0
margin_top = 33.0
margin_right = 456.0
margin_bottom = 225.0
rect_scale = Vector2( 0.5, 0.5 )

[connection signal="pressed" from="Panel/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Panel/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="Panel/CancelButton" to="." method="_on_CancelButton_pressed"]
